--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* Color Scheme: 424342, 39a0ed, 686b6f, f03a47, 23ce6b, f6f8ff */
 /* Reset by html5doctor.com (Author: Richard Clark)-Reset Stylesheet v1.6.1 */
 html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, abbr, address, cite, code, del, dfn, em, img, ins, kbd, q, samp,
 small, strong, sub, sup, var, b, i, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td,
@@ -14,46 +15,48 @@ mark { background-color:#ff9; color:#000;  font-style:italic; font-weight:bold; 
 del { text-decoration: line-through; }
 abbr[title], dfn[title]	 { border-bottom:1px dotted; cursor:help; }
 table { border-collapse:collapse; border-spacing:0; }
-hr { display:block; height:2px; border:0; border-top:1px solid #fff; margin:1em 0; padding:0; }
+hr { display:block; height:2px; border:0; border-top:1px solid #f6f8ff; margin:1em 0; padding:0; }
 input, select { vertical-align:middle; }
 
 /* PCs */
 html { overflow-y: scroll; -webkit-overflow-scrolling: touch; -webkit-tap-highlight-color: rgba(0,0,0,0); -webkit-text-size-adjust: 100%; 
 	-ms-text-size-adjust: 100%; }
+body { font-size: 100%; margin: 0 auto; padding: 0;  background-color: #f6f8ff; }
+/*
 body { font-size: 100%; margin: 0 auto; padding: 0;  background-image: url('images/Page-BgTexture.jpg'); background-repeat: repeat; 
 	background-attachment: fixed; background-position: top left; }
-body, button, input, select, textarea	{ font-family: sans-serif; color: #333; }
+*/
+body, button, input, select, textarea	{ font-family: sans-serif; color: #424342; }
 h1, h2, h3 { letter-spacing: -0.04em; }
-h1.headertext { letter-spacing:0px; font-size: 30px; color: #fff; }
-h1.subheadertext { letter-spacing:1px; font-size: 20px; font-weight: normal; color: deepskyblue; padding: 0; margin: 0; }
+h1.headertext { letter-spacing:0px; font-size: 30px; color: #f6f8ff; }
+h1.subheadertext { letter-spacing:1px; font-size: 20px; font-weight: normal; color: #39a0ed; padding: 0; margin: 0; }
 h1 { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 2.5em; line-height: 1.6em; margin-top: 0.8em; margin-bottom: 0em; }
 h2 { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 2em; line-height: 1.3333em; margin-top: 0.6667em; margin-bottom: 0em; }
 h3 { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 1.8em; line-height: 1.8182em; margin-top: 0.9091em; margin-bottom: 0em; }
 h4 { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 1.250em; line-height: 1.1111em; margin-top: 1.1111em; margin-bottom: 0em; 
-	padding-top: 5px; padding-bottom: 5px; border-bottom: solid 2px #4682B4; }
-a { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; text-decoration: none; color: #336699; }
-a.footer_link { color: #fff; }
-a:link { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; text-decoration: none; color: #336699; }
-a.footer_link:link { color: #fff; }
-a:visited, a.visited { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; text-decoration: none; color: #336699; }
-a.footer_link:visited { color: #fff; }
-a:hover, a.hover { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; text-decoration: none; border-bottom: 3px deepskyblue solid; }
-a.footer_link:hover { text-decoration: underline; color: #fff; }
+	padding-top: 5px; padding-bottom: 5px; border-bottom: solid 2px #39a0ed; }
+a { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; text-decoration: none; color: #39a0ed; }
+a.footer_link { color: #f6f8ff; }
+a:link { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; text-decoration: none; color: #39a0ed; }
+a.footer_link:link { color: #f6f8ff; }
+a:visited, a.visited { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; text-decoration: none; color: #39a0ed; }
+a.footer_link:visited { color: #f6f8ff; }
+a:hover, a.hover { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; text-decoration: none; border-bottom: 3px #39a0ed solid; }
+a.footer_link:hover { text-decoration: underline; color: #f6f8ff; }
 a.anchor { display: block; position: relative; top: -250px; visibility: hidden; }
 .container_main	{ position: relative; z-index: 0; width: 960px; margin: 0 auto; }
-.header { position:relative;  z-index: 1; background-color: #333;
-	margin-left: auto; margin-right: auto; border-top: solid 2px #111; border-bottom: solid 1px #111; }
+.header { position:relative;  z-index: 1; background-color: #424342; border-top: solid 2px #424342; margin-left: auto; margin-right: auto; }
 .profile_container { margin: 0 auto; margin-bottom: 20px; padding:0; list-style: none; width: 972px; height: 140px; }	
 .profile_image { display: block; position: relative; margin-top: 30px; z-index: 1; height: 100px; width: 100px; 
 	background-image: url('images/profile.jpg'); text-align:center; box-shadow: 20px 0px 60px 0px rgba(0,0,0,0.6); 
 	border-radius:30px; -webkit-border-radius: 30px;  float: left; }
 .profile_text { position: relative; height: 100px; margin-left: 150px; padding-top: 15px; }
-.nav-fixed { width: 100%; position: fixed; top: 0; left: 0; height: 33px;  margin: 0 auto;  background-color: #555;  
-	border-bottom: solid 1px #111;  overflow:hidden; z-index: 10; opacity:0.96; -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(opacity=96)"; }     
-.nav { width: 100%;  height: 33px; z-index: 10; margin: 0 auto;  background-color: #555; }
-.nav a,.nav-fixed a { text-decoration: none; color: #FFF; padding: 0 12px 0 12px; display: inline-block; }
-.nav a:visited,.nav-fixed a:visited	{ text-decoration: none; color: #fff; }
-.nav a:hover,.nav-fixed a:hover { text-decoration: none; color: #fff; background-color: #336699; border: none; }
+.nav-fixed { width: 100%; position: fixed; top: 0; left: 0; height: 33px;  margin: 0 auto;  background-color: #686b6f;  
+	overflow:hidden; z-index: 10; opacity:0.96; -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(opacity=96)"; }     
+.nav { width: 100%;  height: 33px; z-index: 10; margin: 0 auto;  background-color: #686b6f; }
+.nav a,.nav-fixed a { text-decoration: none; color: #f6f8ff; padding: 0 12px 0 12px; display: inline-block; }
+.nav a:visited,.nav-fixed a:visited	{ text-decoration: none; color: #f6f8ff; }
+.nav a:hover,.nav-fixed a:hover { text-decoration: none; color: #f6f8ff; background-color: #39a0ed; border: none; }
 .nav ul,.nav-fixed ul { margin: 0 auto; padding:0; list-style: none; width: 972px; }
 .nav li,.nav-fixed li { float: left; padding: 0; margin: 0; line-height: 1.8em; font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 18px; }
 div.backtotop { display: none; }
@@ -69,9 +72,9 @@ div.backtotop { display: none; }
 .col_l { position: relative; min-height: 1px; padding-left: 20px; padding-right: 0px; float: left; width:47%; text-align: justify; }
 .col_r { position: relative; min-height: 1px; padding-left: 20px; float: left; width:47%; text-align: justify; }
 .cleared { float: none; clear: both; margin: 0; padding: 0; border: none; font-size:1px; }
-.footer	{ width:100%; margin-top:60px; position:relative; text-align:center; border-top: solid 1px #111; background-color: #333;}
+.footer	{ width:100%; margin-top:60px; position:relative; text-align:center; border-top: solid 1px #111; background-color: #424342;}
 dl { font-size: 1em; line-height: 2em; float: left; border: solid 1px #bbb; border-right: none; margin: 1em 0 0 0; height: 13em; 
-	padding-top: 1em; text-align: center; background-color: #fff; }
+	padding-top: 1em; text-align: center; background-color: #f6f8ff; }
 dl#email { width: 31.4%; }
 dl#phone { width: 29.4%; }
 dl#address { width: 38.6%; border-right: solid 1px #bbb; }
@@ -81,19 +84,19 @@ dl#address dd { line-height: 1.2em; margin-top: 0.5em; margin-bottom: 0em; }
 img {  border: 0; -ms-interpolation-mode: bicubic; max-width:100%; height: auto; }
 ul, ol, li { margin-left: 20px; }
 p, ul, ol, dl, pre, code { font-size: 1.4em; line-height: 1.4286em; margin-top: 1.4286em; margin-bottom: 0em; }
-p.large_text, ul.large_text, ol.large_text, dl.large_text { font-family: Georgia, "Times New Roman", Times, serif; font-size: 2.2em; 
+p.large_text, ul.large_text, ol.large_text, dl.large_text { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 2.2em; 
 	line-height: 1.3636em; margin-top: 0.9091em; margin-bottom: 0em; }
 p.large_text img, ul.large_text img, ol.large_text img, dl.large_text img { margin-top: 9.9091em; }
 ul.large_text li, ol.large_text li { margin-top: 0.3846em; }
-p.medium_text, ul.medium_text, ol.medium_text, dl.medium_text { font-family: Georgia, "Times New Roman", Times, serif; font-size: 1.4em; 
+p.medium_text, ul.medium_text, ol.medium_text, dl.medium_text { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 1.4em; 
 	line-height: 1.1111em; margin-top: 1.1111em; margin-bottom: 0em; }
 p.medium_text img, ul.medium_text img, ol.medium_text img, dl.medium_text img { margin-top: 1.1111em; }
 ul.medium_text li, ol.medium_text li { margin-top: 0.5em; }
 p.small_text, ul.small_text, ol.small_text, dl.small_text { font-size: 1.0em; line-height: 1.6667em; margin-top: 1.6667em; margin-bottom: 0em; }
-p.small_text img, ul.small_text img, ol.small_text img, dl.small_text img { font-family: Georgia, "Times New Roman", Times, serif; margin-top: 1.6667em; }
+p.small_text img, ul.small_text img, ol.small_text img, dl.small_text img { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; margin-top: 1.6667em; }
 ul.small_text li, ol.small_text li { margin-top: 0.8333em; }
-p.tiny_text { font-size: 0.688em; line-height: 1.6667em; margin-top: 1.6667em; margin-bottom: 0em; color: #fff; }
-p.tiny_text { font-family: Georgia, "Times New Roman", Times, serif; margin-top: 1.6667em; }
+p.tiny_text { font-size: 0.688em; line-height: 1.6667em; margin-top: 1.6667em; margin-bottom: 0em; color: #f6f8ff; }
+p.tiny_text { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; margin-top: 1.6667em; }
 
 /* TABLETS */
 @media only screen and (min-width: 768px) and (max-width: 974px) {
@@ -113,11 +116,11 @@ h1.subheadertext { font-size: 18px; text-align: center;}
 .profile_text { height: auto; margin: 0; padding-top: 0; text-align: center; float: none;}
 .nav-fixed { display: none; }
 .nav { padding-top: 15px; height: auto; width: 100%; margin: 0 auto;  text-align: center;  }	
-.nav ul { width: 40px; min-height: 40px; height: auto; padding: 8px 0; background: #555 url(images/menu.png) no-repeat; float: none; 
+.nav ul { width: 40px; min-height: 40px; height: auto; padding: 8px 0; background: #686b6f url(images/menu.png) no-repeat; float: none; 
 	margin: 0 auto; overflow: hidden; }
 .nav li { display: none; margin: 0; text-align: center; float: none; }
 .nav a { display: block;  text-align: center; }
-.nav ul:hover { background: #555 url(images/menu-hover.png) no-repeat; padding-top:60px; width: 100%; background-position: top center; }
+.nav ul:hover { background: #686b6f url(images/menu-hover.png) no-repeat; padding-top:60px; width: 100%; background-position: top center; }
 .nav ul:hover li { display: block; margin: 0 0 2px; border-left: none; }
 .container_main { width: 90%; z-index: 1; }
 a.anchor { display: block; position: relative; top: -40px; visibility: hidden; }
