--- a/style.css
+++ b/style.css
@@ -20,16 +20,16 @@ input, select { vertical-align:middle; }
 
 /* PCs */
 html { overflow-y: scroll; -webkit-overflow-scrolling: touch; -webkit-tap-highlight-color: #61dafb; -webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; }
-body { font-size: 100%; margin: 0 auto; padding: 0;  background-color: #fcfdff; }
+body { margin: 0 auto; padding: 0; background-color: #fcfdff; font-size: 100%; }
 body, button, input, select, textarea	{ font-family: sans-serif; color: #292f36; }
 h1, h2, h3 { letter-spacing: -0.04em; }
 h1.headertext { letter-spacing:0px; font-size: 30px; color: #fcfdff; }
-h1.subheadertext { letter-spacing:1px; font-size: 20px; font-weight: normal; color: #61dafb; padding: 0; margin: 0; }
-h1 { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 2.5em; line-height: 1.6em; margin-top: 0.8em; margin-bottom: 0em; }
-h2 { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 2em; line-height: 1.3333em; margin-top: 0.6667em; margin-bottom: 0em; }
-h3 { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 1.8em; line-height: 1.8182em; margin-top: 0.9091em; margin-bottom: 0em; }
-h4 { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 1.250em; line-height: 1.1111em; margin-top: 1.1111em; margin-bottom: 0em;
-     padding-top: 5px; padding-bottom: 5px; border-bottom: solid 2px #3e78b2; }
+h1.subheadertext { padding: 0; margin: 0; letter-spacing:1px; font-size: 20px; font-weight: normal; color: #61dafb; }
+h1 { line-height: 1.6em; margin-top: 0.8em; margin-bottom: 0em; font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 2.5em; }
+h2 { line-height: 1.3333em; margin-top: 0.6667em; margin-bottom: 0em; font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 2em; }
+h3 { margin-top: 0.9091em; margin-bottom: 0em; font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 1.8em; line-height: 1.8182em; }
+h4 { margin-top: 1.1111em; margin-bottom: 0em; padding-top: 5px; padding-bottom: 5px; border-bottom: solid 2px #3e78b2;
+     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 1.250em; line-height: 1.1111em; }
 a { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; text-decoration: none; color: #3e78b2; }
 a.footer_link { color: #fcfdff; }
 a:link { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; text-decoration: none; color: #3e78b2; }
@@ -41,24 +41,24 @@ a.footer_link:hover { text-decoration: underline; color: #fcfdff; }
 a.anchor { display: block; position: relative; top: -250px; visibility: hidden; }
 .container_odd { background-color: #fcfdff; }
 .container_even { background-color: #eff0f2; }
-.container_main	{ position: relative; z-index: 0; width: 960px; margin: 0 auto; padding-bottom:60px; padding-top:30px;}
-.header { position:relative;  z-index: 1; background-color: #292f36; border-top: solid 2px #292f36; margin-left: auto; margin-right: auto; }
+.container_main	{ position: relative; z-index: 0; width: 960px; margin: 0 auto; padding-bottom:60px; padding-top:30px; }
+.header { position:relative;  z-index: 1; margin-left: auto; margin-right: auto; background-color: #292f36; border-top: solid 2px #292f36; }
 .profile_container { margin: 0 auto; margin-bottom: 20px; padding:0; list-style: none; width: 972px; height: 140px; }
-.profile_image { display: block; position: relative; margin-top: 30px; z-index: 1; height: 100px; width: 100px;  background-image: url('images/profile.png'); text-align:center;
-		 box-shadow: 20px 0px 60px 0px rgba(0,0,0,0.6); border-radius:30px; -webkit-border-radius: 30px;  float: left; }
-.profile_text { position: relative; height: 100px; margin-left: 150px; padding-top: 15px; }
-.nav-fixed { width: 100%; position: fixed; top: 0; left: 0; height: 33px;  margin: 0 auto;  background-color: #495867; overflow:hidden; z-index: 10; opacity:0.96;
+.profile_image { display: block; position: relative; z-index: 1; float: left; margin-top: 30px; height: 100px; width: 100px;  background-image: url('images/profile.png'); text-align:center;
+		 box-shadow: 20px 0px 60px 0px rgba(0,0,0,0.6); border-radius:30px; -webkit-border-radius: 30px; }
+.profile_text { position: relative; margin-left: 150px; padding-top: 15px; height: 100px; }
+.nav-fixed { position: fixed; top: 0; left: 0; z-index: 10; margin: 0 auto; width: 100%; height: 33px;  background-color: #495867; overflow:hidden;  opacity:0.96;
 	     -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(opacity=96)"; }
-.nav { width: 100%;  height: 33px; z-index: 10; margin: 0 auto;  background-color: #495867; }
-.nav a,.nav-fixed a { text-decoration: none; color: #fcfdff; padding: 0 12px 0 12px; display: inline-block; }
-.nav a:visited,.nav-fixed a:visited	{ text-decoration: none; color: #fcfdff; }
+.nav { z-index: 10; margin: 0 auto; width: 100%;  height: 33px;  background-color: #495867; }
+.nav a,.nav-fixed a { display: inline-block; padding: 0 12px 0 12px; text-decoration: none; color: #fcfdff; }
+.nav a:visited,.nav-fixed a:visited { text-decoration: none; color: #fcfdff; }
 .nav a:hover,.nav-fixed a:hover { text-decoration: none; color: #292f36; background-color: #61dafb; border: none; }
 .nav li.menubutton { display: none; } 
-.nav ul,.nav-fixed ul { margin: 0 auto; padding:0; list-style: none; width: 972px; }
+.nav ul,.nav-fixed ul { margin: 0 auto; padding:0; width: 972px; list-style: none; }
 .nav li,.nav-fixed li { float: left; padding: 0; margin: 0; line-height: 1.8em; font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 18px; }
 div.backtotop { display: none; }
 .section { position:relative; z-index: 1; }
-.section_first { position:relative; margin-top: 2em; z-index: 1; }
+.section_first { position:relative; z-index: 1; margin-top: 2em; }
 .row { margin-right: -20px; margin-left: -20px; }
 .row:before, .row:after { display: table; content: " "; }
 .row:after { clear: both; }
@@ -67,33 +67,33 @@ div.backtotop { display: none; }
 .row_in	{ margin-left:auto; margin-right:auto; }
 .col_c { position: relative; min-height: 1px; padding-left: 20px; padding-right: 20px; float: left; width:96%; text-align: justify; }
 .col_l { position: relative; min-height: 1px; padding-left: 20px; padding-right: 0px; float: left; width:47%; text-align: justify; }
-.col_r { position: relative; min-height: 1px; padding-left: 20px; float: left; width:47%; text-align: justify; }
-.cleared { float: none; clear: both; margin: 0; padding: 0; border: none; font-size:1px; }
-.footer	{ width:100%; position:relative; text-align:center; border-top: solid 1px #111; background-color: #292f36;}
-dl { font-size: 1em; line-height: 2em; float: left; border: solid 1px #bbb; border-right: none; margin: 1em 0 0 0; height: 13em; 
-     padding-top: 1em; text-align: center; background-color: #fcfdff; }
+.col_r { position: relative; min-height: 1px; padding-left: 20px; float: left; width: 47%; text-align: justify; }
+.cleared { float: none; clear: both; margin: 0; padding: 0; border: none; font-size: 1px; }
+.footer	{ position:relative; width: 100%; border-top: solid 1px #111; background-color: #292f36; text-align:center; }
+dl { float: left; margin: 1em 0 0 0; padding-top: 1em; height: 13em; border: solid 1px #bbb; border-right: none;  text-align: center; background-color: #fcfdff;
+     font-size: 1em; line-height: 2em; }
 dl#email { width: 31.4%; }
 dl#phone { width: 29.4%; }
 dl#address { width: 38.6%; border-right: solid 1px #bbb; }
-dt { font-size: 1.2em; font-weight: bold; text-transform: uppercase; margin-bottom: 1.4em; }
-dl#email dd, dl#phone dd { letter-spacing: -0.039em; line-height: 1.2em; margin-top: 0.5em; }
-dl#address dd { line-height: 1.2em; margin-top: 0.5em; margin-bottom: 0em; }
-img {  border: 0; -ms-interpolation-mode: bicubic; max-width:100%; height: auto; }
+dt { margin-bottom: 1.4em; font-size: 1.2em; font-weight: bold; text-transform: uppercase; }
+dl#email dd, dl#phone dd { margin-top: 0.5em; letter-spacing: -0.039em; line-height: 1.2em; }
+dl#address dd { margin-top: 0.5em; margin-bottom: 0em; line-height: 1.2em; }
+img { max-width:100%; height: auto; border: 0; -ms-interpolation-mode: bicubic; }
 ul, ol, li { margin-left: 20px; }
-p, ul, ol, dl, pre, code { font-size: 1.4em; line-height: 1.4286em; margin-top: 1.4286em; margin-bottom: 0em; }
-p.large_text, ul.large_text, ol.large_text, dl.large_text { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 2.2em;
-							    line-height: 1.3636em; margin-top: 0.9091em; margin-bottom: 0em; }
+p, ul, ol, dl, pre, code { margin-top: 1.4286em; margin-bottom: 0em; font-size: 1.4em; line-height: 1.4286em; }
+p.large_text, ul.large_text, ol.large_text, dl.large_text { margin-top: 0.9091em; margin-bottom: 0em; font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+							    font-size: 2.2em; line-height: 1.3636em; }
 p.large_text img, ul.large_text img, ol.large_text img, dl.large_text img { margin-top: 9.9091em; }
 ul.large_text li, ol.large_text li { margin-top: 0.3846em; }
-p.medium_text, ul.medium_text, ol.medium_text, dl.medium_text { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 1.4em; line-height: 1.1111em;
-								margin-top: 1.1111em; margin-bottom: 0em; }
+p.medium_text, ul.medium_text, ol.medium_text, dl.medium_text { margin-top: 1.1111em; margin-bottom: 0em; font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+								font-size: 1.4em; line-height: 1.1111em; }
 p.medium_text img, ul.medium_text img, ol.medium_text img, dl.medium_text img { margin-top: 1.1111em; }
 ul.medium_text li, ol.medium_text li { margin-top: 0.5em; }
-p.small_text, ul.small_text, ol.small_text, dl.small_text { font-size: 1.0em; line-height: 1.6667em; margin-top: 1.6667em; margin-bottom: 0em; }
-p.small_text img, ul.small_text img, ol.small_text img, dl.small_text img { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; margin-top: 1.6667em; }
+p.small_text, ul.small_text, ol.small_text, dl.small_text { margin-top: 1.6667em; margin-bottom: 0em; font-size: 1.0em; line-height: 1.6667em; }
+p.small_text img, ul.small_text img, ol.small_text img, dl.small_text img { margin-top: 1.6667em; font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; }
 ul.small_text li, ol.small_text li { margin-top: 0.8333em; }
-p.tiny_text { font-size: 0.688em; line-height: 1.6667em; margin-top: 1.6667em; margin-bottom: 0em; color: #fcfdff; }
-p.tiny_text { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; margin-top: 1.6667em; }
+p.tiny_text { margin-top: 1.6667em; margin-bottom: 0em; font-size: 0.688em; line-height: 1.6667em; color: #fcfdff; }
+p.tiny_text { margin-top: 1.6667em; font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; }
 
 /* TABLETS */
 @media only screen and (min-width: 768px) and (max-width: 974px) {
@@ -108,32 +108,33 @@ p.tiny_text { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; margi
 html body { max-width: 100%; overflow-x: hidden; }
 h1.headertext { font-size: 28px; text-align: center; }
 h1.subheadertext { font-size: 18px; text-align: center; }
-.profile_container { width: 100%; height: auto; margin-left: auto; margin-right: auto; }
-.profile_image { margin-left: auto; margin-right: auto; margin-top: 10px; float: none; }
-.profile_text { height: auto; margin: 0; padding-top: 0; text-align: center; float: none;}
-.nav-fixed { padding-top: 10px; padding-bottom: 10px; width: 100%; height: auto; position: fixed; top: 0; left: 0; z-index: 10; }
-.nav { padding-top: 10px; padding-bottom: 10px; height: auto; width: 100%; margin: 0 auto;  text-align: center; }
-.nav ul, .nav-fixed ul { margin: auto; text-align: center; border-bottom: 17px double #fcfdff; border-top: 6px solid #fcfdff; content:""; height: 5px; width: 35px; }
-.nav li, .nav-fixed li { display: none; margin: 0; text-align: center; float: none; }
+.profile_container { margin-left: auto; margin-right: auto; width: 100%; height: auto; }
+.profile_image { float: none; margin-left: auto; margin-right: auto; margin-top: 10px; }
+.profile_text { float: none; margin: 0; padding-top: 0; height: auto; text-align: center; }
+.nav-fixed { padding-top: 10px; padding-bottom: 10px; width: 100%; height: auto; }
+.nav { margin: 0 auto; padding-top: 10px; padding-bottom: 10px; height: auto; width: 100%; text-align: center; }
+.nav ul, .nav-fixed ul { margin: auto; height: 5px; width: 35px; border-bottom: 17px double #fcfdff; border-top: 6px solid #fcfdff; text-align: center; content:""; }
+.nav li, .nav-fixed li { display: none; }
 .nav a, .nav-fixed a { display: block;  text-align: center; }
 .nav ul:hover, .nav-fixed ul:hover { height: 100%; width: 100%; background-position: top center; border: none; }
-.nav ul:hover li, .nav-fixed ul:hover li { display: block; margin: 0 0 2px; border-left: none; }
-.nav ul:hover li.menubutton, .nav-fixed ul:hover li.menubutton { display: inline-block; border-bottom: 17px double #61dafb; border-top: 6px solid #61dafb; content:""; height: 5px; width: 35px; }
-.container_main { width: 90%; z-index: 0; }
-a.anchor { display: block; position: relative; top: -40px; visibility: hidden; }
-div.backtotop { display: block; float: right; }
-div.backtotop a	{ border: none; display: block; width: 30px; height: 30px; margin-top: 2.2em; background: url(images/arrow_top.png) no-repeat right 0; }
+.nav ul:hover li, .nav-fixed ul:hover li { display: block; float: none; margin: 0 0 2px; border-left: none; text-align: center; }
+.nav ul:hover li.menubutton, .nav-fixed ul:hover li.menubutton { display: inline-block; height: 5px; width: 35px; border-bottom: 17px double #61dafb;
+								 border-top: 6px solid #61dafb; content:""; }
+.container_main { z-index: 0; width: 90%; }
+a.anchor { display: block; position: relative; visibility: hidden; top: -40px; }
+div.backtotop { display: block; float: right; padding-top: 30px; }
+div.backtotop a	{ display: block; border: none; font-size: 30px; color: #292f36; font-weight: bolder; }
 div.backtotop a:hover { opacity: 0.2; -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(opacity=20)"; }
-div.backtotop a span { display: none; }
+div.backtotop a:visited { color: #292f36; }
 .col_c	{ width:90%; }
 .col_l	{ width:90%; }
 .col_r	{ width:90%; }
-dl { text-align: left; padding-bottom: 0.87em; float: none; border: solid 1px #bbb; border-bottom: none; margin: 0; height: auto; }
-dl.small_text { margin-top: 0em; line-height: 1.2em;}
+dl { float: none; padding-bottom: 0.87em; margin: 0; height: auto; border: solid 1px #bbb; border-bottom: none; text-align: left; }
+dl.small_text { margin-top: 0em; line-height: 1.2em; }
 dl#email { margin-top: 1em; }
 dl#address { border-bottom: solid 1px #bbb; }
-dl#email, dl#phone, dl#address { width: 95.5%; padding-left: 3%; }
-dt { float: left; width: 22%; padding-right: 3%; font-size: 1.0em; margin-bottom: 0; }
+dl#email, dl#phone, dl#address { padding-left: 3%; width: 95.5%; }
+dt { float: left; padding-right: 3%; margin-bottom: 0; width: 22%; font-size: 1.0em; }
 dd { margin-left: 30%; margin-bottom: 0.5em; }
 dl#email dd, dl#phone dd, dl#address dd { margin-top: 0; }	
 }
